# EventMan

./: .env  .env.example  .gitignore  .vercelignore  Readme.md  biome.json  build.sh  conftest.py  cookies.txt  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tailwind.config.js  vercel.json  vite.config.mjs
.qwen/: Plan.md
api/: index.py
core/: views.py
eventMan/: asgi.py  settings.py  settings.py.backup  urls.py  wsgi.py
event_management_project/: settings.py  urls.py
events/: admin.py  apps.py  constants.py  decorators.py  filters.py  forms.py  models.py  payment_utils.py  redis_utils.py  signals.py  storage_utils.py  tests.py  urls.py  views.py
events/.cph/: .signals.py_d23ac5b232079971398e4ccab8aba789.prob
events/forms/: contact_form.py  forms.py
events/migrations/: 0001_initial.py  0002_alter_category_options_alter_event_options_and_more.py  0002_event_organizer_event_participants_and_more.py  0003_alter_event_options_event_image_event_rsvped_users_and_more.py  0003_event_ticket_price_event_tickets_sold_payment.py  0004_alter_event_image_alter_profile_profile_picture.py  0005_alter_event_image_alter_profile_profile_picture.py  0006_alter_event_image_alter_profile_profile_picture.py  0007_rsvp.py  0008_alter_payment_status_alter_rsvp_status.py
events/tests/: conftest.py  (+8 more)
task_management/: settings.py  urls.py
tasks/: urls.py  views.py
templates/: base.html  base.html.backup  contact.html  dashboard_base.html  home.html  payment_fail.html  payment_success.html
users/: urls.py  views.py
(+61 files in other folders)
